--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@tabler/icons-react": "^2.20.0",
     "next": "13.5.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-world-flags": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.1",
@@ -41,6 +42,7 @@
     "@types/jest": "^29.5.1",
     "@types/node": "^20.2.5",
     "@types/react": "18.2.7",
+    "@types/react-world-flags": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "babel-loader": "^9.1.2",
